--- a/_config.yaml
+++ b/_config.yaml
@@ -30,3 +30,6 @@ portfolio:
   - image: kbdfans.png
     color: light-grey
     description: A build by KBDFans
+  - image: thekeycompany.png
+    color: light-grey
+    description: Another Another Realistic render
