--- a/_config.yaml
+++ b/_config.yaml
@@ -26,10 +26,10 @@ portfolio:
     description: Pillow65 by Kelium Works
   - image: realism-2.png
     color: light-grey
-    description: Another realistic render
+    description: Koyu by Rama Works
   - image: kbdfans.png
     color: light-grey
-    description: A build by KBDFans
+    description: D60 Lite by KBDFans
   - image: the-key-company.png
     color: light-grey
-    description: Another Another Realistic render
+    description: M0LLY By The Key Company
