--- a/_config.yaml
+++ b/_config.yaml
@@ -19,7 +19,10 @@ colors:
     R: 240
     G: 240
     B: 240
-
+  - name: Beige
+    R: 237
+    G: 230
+    B: 213
 portfolio:
   - image: realism-1.png
     color: light-grey
