--- a/_config.yaml
+++ b/_config.yaml
@@ -33,6 +33,6 @@ portfolio:
   - image: kbdfans.png
     color: Beige
     description: D60 Lite by KBDFans
-  - image: the-key-company.png
+  - image: m0lly.png
     color: Beige
     description: M0LLY By The Key Company
