--- a/_config.yaml
+++ b/_config.yaml
@@ -35,4 +35,4 @@ portfolio:
     description: D60 Lite by KBDFans
   - image: m0lly.png
     color: Beige
-    description: M0LLY By The Key Company
+    description: Saka68 By CMM Studio
