--- a/_config.yaml
+++ b/_config.yaml
@@ -33,6 +33,6 @@ portfolio:
   - image: kbdfans.png
     color: Beige
     description: D60 Lite by KBDFans
-  - image: m0lly.png
+  - image: saka68.png
     color: Beige
     description: Saka68 By CMM Studio
